Squashing Bugs and Loading Screen
There was a bug where cards were not being added to bottoms of decks. Loading screen now appears on startup

--- a/Project/style.css
+++ b/Project/style.css
@@ -1,4 +1,30 @@
-#gameOfWar {
+#game-of-war {
+  margin: 0%;
   width: 100%;
   height: 100%;
+}
+
+.progress-bar-container {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  width: 100%;
+  height: 100%;
+  background-color: rgb(0, 0, 0);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+#progress-bar {
+  width:30%;
+  margin-top: 0.5%;
+  height: 2%;
+}
+
+label {
+  color: white;
+  font-size: 2rem;
 }
